force-app/main/default/objects/Stock_Request_Item__c/Stock_Request_Item__c.object-meta.xml
<CustomObject>
    <label>Stock Request Item</label>
    <nameField>
        <label>Stock Request Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>