force-app/main/default/objects/Stock_Request_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Stock Request Items</relationshipLabel>
    <relationshipName>Stock_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>