force-app/main/default/objects/Stock_Request_Item__c/fields/Stock_Request__c.field-meta.xml
<CustomField>
    <fullName>Stock_Request__c</fullName>
    <label>Stock Request</label>
    <referenceTo>Stock_Request__c</referenceTo>
    <relationshipLabel>Stock Request Items</relationshipLabel>
    <relationshipName>Stock_Request_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>