force-app/main/default/objects/Stock_Request_Item__c/fields/Stock_Request_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Request_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stock Request Item Id</label>
    <type>AutoNumber</type>
</CustomField>