force-app/main/default/objects/Stock_Request_Item__c/fields/Transfered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Transfered_Quantity__c</fullName>
    <label>Transfered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>